api-reference/v2/accounting/tax-rates/create-tax-rates.mdx
---
version: "v2"
openapi: openapi_v2 post /accounting/tax_rates
---

A [Tax Rate](https://docs.rootfi.dev/api-reference/tax-rates/overview) is the percentage at which an individual or corporation is taxed.

[he Tax Rates Data Model] is designed to provide a unified representation of tax rates across various accounting platforms.

<RequestExample>

```bash cURL
curl --request POST \
  --url https://api.rootfi.dev/accounting/tax_rates \
  --header 'Content-Type: application/json' \
  --header 'api_key: <api-key>' \
  --data '{
  "company_id": 1,
  "data": [
    {
      "name": "Rootfi Test Tax Rate",
      "code": "1234567890",
      "effective_tax_rate": 10,
      "total_tax_rate": 10,
      "tax_type": "VAT",
      "components": [
        {
          "name": "Rootfi Test Tax Rate Component",
          "is_compound": false,
          "rate": 10,
          "tax_agency": "igst"
        }
      ]
    }
  ]
}'
```

```javascript NodeJS
import { RootFiClient } from "rootfi-api";
const rootfi = new RootFiClient({ apiKey: "<api_key>" });

await rootfi.accounting.accounts.create({
  company_id: 56789,
  data: [
    {
      name: "Rootfi Test Tax Rate",
      code: "1234567890",
      effective_tax_rate: 10,
      total_tax_rate: 10,
      tax_type: "VAT",
      components: [
        {
          name: "Rootfi Test Tax Rate Component",
          is_compound: false,
          rate: 10,
          tax_agency: "igst",
        },
      ],
    },
  ],
});
```

</RequestExample>
